# newsy

./: .gitignore  README.md  pyproject.toml
.github/actions/install-deps/: action.yaml
.github/workflows/: frontpage-processor.yaml
newsy/: __init__.py
