[tool.poetry]
name = "newsy"
version = "0.1.0"
description = ""
authors = ["Walter Zielenski <wzielenski@project44.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymupdf = "^1.21.1"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
process = "newsy:processor"
